--- a/style.css
+++ b/style.css
@@ -49,14 +49,76 @@ body {
     height: 50px;
     border: none;
     border-radius: 6%;
+    margin-top: 30px;
+    text-align: center;
 }
 
 .container1 .play-circle {
     border: none;
     background-color: white;
+    margin-top: 20px;
+    margin-bottom: 75px;
+    width: 176px;
+    height: 50px;
+
 }
 
 .icono-play {
     background-color: rgb(0, 166, 255);
     border-radius: 100%;
+    width: 40px;
 }
+
+.container1 .play-circle span {
+    color: gray;
+    padding: 5px;
+}
+
+.container2 {
+    padding: 50px 10px;
+
+}
+
+.container2 img {
+    margin-bottom: 70px;
+    border-radius: 6%;
+}
+
+.container2 h2 {
+    color: rgba(7, 7, 101, 0.782);
+    font-size: 2.5rem;
+    margin-bottom: 30px;
+}
+
+.container2 .subtitulo {
+    color: gray;
+    font-size: 1.4rem;
+
+}
+
+.container2 p {
+    font-size: 1.1rem;
+    color: gray;
+}
+
+.numeros h3 {
+    color: rgb(0, 166, 255);
+    font-size: 3rem;
+    text-align: center;
+}
+
+.numeros p {
+    text-align: center;
+}
+
+.discover {
+    background-color: white;
+    color: rgba(3, 139, 211, 0.759);
+    border-color: rgb(0, 166, 255);
+
+
+    border-radius: 5%;
+    font-weight: 600;
+}
+
+.discover img {}
