--- a/style.css
+++ b/style.css
@@ -115,10 +115,132 @@ body {
     background-color: white;
     color: rgba(3, 139, 211, 0.759);
     border-color: rgb(0, 166, 255);
-
-
     border-radius: 5%;
     font-weight: 600;
+    height: 50px;
+    display: inline-flex;
+
 }
 
-.discover img {}
+.discover .flecha-derecha {
+    align-content: center;
+    width: 110px;
+    height: 20px
+}
+
+.container3 h2 {
+    text-align: center;
+    color: rgba(7, 7, 101, 0.782);
+    font-size: 2.2rem;
+    text-decoration: underline;
+    padding: 30px;
+}
+
+.container3 h3 {
+    color: rgba(7, 7, 101, 0.782);
+    text-align: start;
+    padding: 25px;
+    font-weight: 600;
+    margin-bottom: 1px;
+}
+
+.text-services {
+    text-align: center;
+    color: gray;
+}
+
+.servicios {
+    text-align: start;
+    margin-left: 25px;
+    color: gray;
+}
+
+.iconos-con3 {
+    width: 20px;
+    margin-left: 25px;
+    margin-top: 40px;
+}
+
+.container3 button {
+    margin-left: 25px;
+    border: none;
+    background-color: white;
+    font-weight: 500;
+}
+
+.container4 {
+    text-align: start;
+    margin-left: 25px;
+    margin-top: 80px;
+}
+
+.container4 .iconos-con4 {
+    width: 30px;
+    margin-left: 30px;
+    margin-top: 80px;
+}
+
+.container4 h3 {
+    color: rgba(7, 7, 101, 0.782);
+    font-weight: 600;
+    padding: 15px;
+}
+
+.container4 p {
+    margin-left: 15px;
+    color: gray;
+
+}
+
+.items-con4 {
+    background-color: rgba(3, 138, 211, 0.529);
+    border-radius: 100%;
+    margin: 10px;
+}
+
+.fotos-con4 {
+    width: 250px;
+    margin-top: 30px;
+}
+
+.container5 h2 {
+    text-align: center;
+    margin-top: 80px;
+    color: rgba(7, 7, 101, 0.782);
+    font-weight: 500;
+    font-size: 2rem;
+    text-decoration: underline;
+    margin-bottom: 45px;
+}
+
+.container5 p {
+    text-align: center;
+    margin-left: 20px;
+}
+
+.container5 ul {
+    display: inline-flex;
+    list-style: none;
+    margin-left: 30px;
+
+}
+
+
+
+.container5 img {
+    width: 230px;
+    margin-left: 20px;
+    border-radius: 1cap;
+    margin-top: 50px;
+}
+
+.container5 figure {
+    width: 265px;
+}
+
+.col-lg-4 img {
+    width: 220px;
+    height: 150px;
+
+
+}
