--- a/style.css
+++ b/style.css
@@ -215,32 +215,150 @@ body {
 
 .container5 p {
     text-align: center;
+    font-size: 1.rem;
     margin-left: 20px;
+    color: gray;
+
 }
 
 .container5 ul {
-    display: inline-flex;
+    display: flex;
     list-style: none;
-    margin-left: 30px;
-
 }
 
 
 
 .container5 img {
-    width: 230px;
-    margin-left: 20px;
+    width: 270px;
+    height: 190px;
+    margin-left: 30px;
     border-radius: 1cap;
     margin-top: 50px;
+    vertical-align: middle;
 }
 
-.container5 figure {
-    width: 265px;
+.container5 figcaption {
+    text-align: center;
+    margin-top: 20px;
 }
 
-.col-lg-4 img {
-    width: 220px;
-    height: 150px;
+.container5 h3 {
+    color: rgba(7, 7, 101, 0.782);
+    font-weight: 550;
+}
 
+.container6 {
+    text-align: center;
+    padding: 10px;
+    margin-top: 100px;
+}
 
+.container6 h2 {
+    font-size: 2rem;
+    color: rgba(7, 7, 101, 0.782);
+    font-weight: 550;
+    text-decoration-line: underline;
+    margin-bottom: 40px;
+}
+
+.container6 h3 {
+    color: rgba(7, 7, 101, 0.782);
+    font-weight: 600;
+    margin-top: 20px;
+}
+
+.container6 p {
+    color: gray;
+    margin-bottom: 70px;
+}
+
+.container6 img {
+    width: 40px;
+}
+
+.container7 {
+    padding: 20px;
+}
+
+.container7 table img {
+    display: flex;
+    align-content: center;
+
+}
+
+.container7 h5 {
+    text-align: start;
+    padding: 0%;
+    font-size: 0.8rem;
+}
+
+.container7 table p {
+    font-size: 0.8rem;
+}
+
+.iconos-con7 {
+    width: 20px;
+    margin-right: 2px;
+    margin-left: 30px;
+}
+
+.container7 table {
+    padding: 16px 20px;
+    margin-bottom: 50px;
+
+}
+
+.container7 span {
+    width: 130px;
+    padding: 5px;
+    margin-bottom: 30px;
+}
+
+.titulo-con7 {
+    color: rgba(6, 6, 85, 0.782);
+    font-size: 1.3rem;
+    margin-bottom: 20px;
+}
+
+.p-con7 {
+    color: gray;
+    font-size: 0.8rem;
+    margin-bottom: 35px;
+}
+
+.numeros2 {
+    display: flex;
+}
+
+.numeros2-con7 {
+    color: rgba(3, 138, 211, 0.704);
+    font-size: 1.5rem;
+}
+
+.abajo-numero {
+    font-size: 0.8rem;
+}
+
+.items-con7 img {
+    width: 11px;
+}
+
+.items-con7 span {
+    font-size: 1rem;
+    color: gray;
+}
+
+.items-con7 {
+    padding: 10px;
+}
+
+.enlace-explore {
+    color: rgba(3, 138, 211, 0.704);
+    margin-bottom: 60px;
+    margin-top: 30px;
+}
+
+.img-final {
+    width: 290px;
+    border-radius: 1cap;
 }
